--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,76 @@
-#page-links {
+html,
+body {
+   margin: 0;
+   padding: 0;
+}
+
+body {
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    font-family:Arial, Helvetica, sans-serif;
+    background-color: dimgray;
+}
+
+#search-form {
+    padding: 10px;
+}
+
+#top {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 2.5vh;
+    padding-right: 2.5vw;
+    height: 20vh;
+    align-items: flex-start;
+}
+
+#top > a {
+    padding: 5px 10px;
+    text-decoration: none;
+    color: blue;
+}
+
+#mid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+}
+
+#search-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#search-form input {
+    margin: 10px;
+    box-sizing: border-box;
+    border: none;
+}
+
+input[type="text"] {
+    padding: 12px 20px;
+    border-radius: 25px;
+    width: 25vw;
+}
+
+input[type="submit"] {
+    border-radius: 7.5px;
+    font-size:medium;
+    text-wrap:balance;
+    padding:10px 20px;
+}
+
+#search-form span {
+    display: flex;
+    justify-content: space-between;
+}
+
+#bottom {
+    display: flex;
+    height: 20vh;
 }
